--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
+- script: pip install -r requirements.txt
+  displayName: 'Instalar dependencias'
+
 - script: |
     echo "Ejecutando script Python..."
     python3 Errorpy.py
